home page done !faq

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "swiper": "^11.0.7",
     "vue": "^3.4.15",
     "vue-native-dialog": "^0.0.3",
     "vue-router": "^4.2.5"
