--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "swiper": "^11.0.7",
     "vee-validate": "^4.5.8",
     "vue": "^3.4.15",
